<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="grp_manage">GROUP MANAGEMENT</string>
    <string name="mem_manage">MEMBER MANAGEMENT</string>
    <string name="Ass_manage">ASSIGNMENT MANAGEMENT</string>
    <string name="Self_manage">SELF MANAGEMENT</string>
    <string name="Report">REPORTS</string>
    <string name="title_activity_grp__manage">Grp_Manage</string>
    <string name="title_activity_member__manage">Member_Manage</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="Name">Contact Name</string>
    <string name="Password">Password</string>
    <string name="Conf_Passwd">Confirm Password</string>
    <string name="PhoneNumber">Contact Number</string>
    <string name="DigitsName">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ </string>
    <string name="EmailId">Email</string>
    <string name="Assgn_Type_Prompt">Choose an Assignment Type</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Successfully added device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
	<string name="strSelectedDate"> %s</string>
    <string-array name="Assgn_array">
        <item>One Time Job</item>
        <item>Short Term Job</item>
        <item>Long Term Job</item>
        <item>Specific Date Job</item>
    </string-array>

    <string name="Reccurence_prompt">Choose the Interval</string>

    <string-array name="Reccurence_Array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quaterly</item>
        <item>Yearly</item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Performance Report</item>
        <item>TAT Report</item>
        <item>Monthly Report</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <string name="Type_prompt">Select the type</string>

    <string-array name="Type_Array">
        <item>Admin</item>
        <item>Assignee</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_job">JobActivity</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>