<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/admin_bg"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <View
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:layout_weight="1.7" />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:src="@drawable/logout_btn" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/grp_details"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.9"
            android:background="#FACC2E"
            android:text="@string/grp_manage" >
        </Button>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <Button
                android:id="@+id/mem_details"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="#A9F5F2"
                android:text="@string/mem_manage" />

            <Button
                android:id="@+id/self_details"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="#9FF781"
                android:text="@string/Self_manage" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/report"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:background="#81F7D8"
            android:text="@string/Report" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/assign_details"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="#F6CECE"
                android:text="@string/Ass_manage" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>