<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin_bg"
    android:orientation="vertical"
    android:weightSum="50" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/ass_layout"
        android:layout_margin="20dp"
        android:layout_weight="45"
        android:orientation="vertical"
        android:weightSum="13" >

        <Button
            android:id="@+id/grp_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@drawable/btn_menu"
            android:padding="10dp"
            android:text="@string/grp_manage"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3.2" />

        <Button
            android:id="@+id/assign_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@drawable/btn_menu"
            android:padding="10dp"
            android:text="@string/Ass_manage"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3.2" />

        <Button
            android:id="@+id/self_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@drawable/btn_menu"
            android:padding="10dp"
            android:text="@string/Self_manage"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3.2" />

        <Button
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@drawable/btn_menu"
            android:padding="10dp"
            android:text="@string/Report"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

</LinearLayout>